--- a/tags.html
+++ b/tags.html
@@ -47,6 +47,6 @@
                 <option value="yes1">Yes!!</option>
             </select>
         </p>
-        <p><b>I'm bold!</b> <i>I'm falling down!</i> <sub>I'm shy</sub></p>
+        <p style="width: 100px;background-color: burlywood;padding:30px;margin: 30px;border: 1px solid black; border-radius: 8px;"><b>I'm bold!</b> <i>I'm falling down!</i> <sub>I'm shy</sub></p>
     </body>
 </html>
