--- a/someCss.html
+++ b/someCss.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Tom's Awesome Website</title>
-        <link rel="stylesheet" href="anExternalCss.css">
+        <link rel="stylesheet" href="anExternal.css">
     </head>
     <body>
         <h1>Tom Lou</h1>
